Fix bottom naigation menu text layout issue

--- a/SCSS/main/main.css
+++ b/SCSS/main/main.css
@@ -430,6 +430,7 @@ footer > .navigation-menu {
     margin-inline: 0;
     margin-bottom: 0;
     gap: 17px;
+    text-align: left;
   }
   footer .social-media-icons {
     grid-column: 1/2;
