--- a/SCSS/sections/_footer.scss
+++ b/SCSS/sections/_footer.scss
@@ -38,6 +38,7 @@ footer {
 			margin-inline: 0;
 			margin-bottom: 0;
 			gap: 17px;
+			text-align: left;
 		}
 
 		.social-media-icons {
